@@ -24,7 +24,6 @@ pueden quedarse activos. Esto en load snapshot zsf de zxuno lo hace aparte
 
 *MK14: falta incluso funcion de grabar registros de la cpu      
 
-*TS2068   
 *Sam      
 *Chloe140 
 *Chloe280 
