@@ -67,6 +67,7 @@
 #define ZSF_Z88_MEMBLOCK 41
 #define ZSF_Z88_CONF 42
 #define ZSF_Z80_HALT_STATE 43
+#define ZSF_TIMEX_DOCK_ROM 44
 
 #define MAX_ZSF_SNAPSHOT_SIZE 1024*1024*16
 
