@@ -1,6 +1,8 @@
 Version 10.2 - xx edition. 10 May 2022
 
 Allow .Z80 corrupted snapshot loading from ZXSP emulator with additional header of 31 byte size
+Added ZSF support for Timex TS2068
+
 Fixed .Z80 Timex TS2068 snapshot loading
 
 
